--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -6,7 +6,7 @@
 {% endblock style %}
 {% block content %}
    <div class="outer">
-    <div class="content-section">
+    <div class="content-section" style="margin-bottom:60px;">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.profile_picture.url }}">
         <div class="media-body">
