--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -17,7 +17,7 @@
 />
 {% endblock style %} 
 {% block body %}
-<div class="container">
+<div class="container" style="margin-bottom:60px;">
   <div class="frm">
     <form method="POST" class="loginfrm">
       {% csrf_token %}
