--- a/users/static/users/Navbar.css
+++ b/users/static/users/Navbar.css
@@ -1,6 +1,7 @@
 :root {
     --blue: #092230;
     --off_white: #eae7d6;
+    --color-option: #092230;
 }
 
 .custom-navbar{
@@ -19,3 +20,7 @@
     opacity: 1;
     /* aspect-ratio:1; */
 }
+
+.ftr{
+    background-color: #092230 !important;
+  }
