--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -10,8 +10,8 @@
     <!-- Bootstrap CSS -->
     {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> {% endcomment %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
+    <script src="https://kit.fontawesome.com/0493cbe504.js" crossorigin="anonymous"></script>
     <title>GharBulao</title>
     <link rel="stylesheet" type="text/css" href="{% static 'users/Navbar.css' %}">
     {% block style %}
@@ -76,12 +76,6 @@
     {% block body %}
     {% endblock body %}
 
-    <footer>
-          <div class="footer font1">
-        <p> Copyright &copy; GharBulao.com</p>
-    </div>
-    </footer
-
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   
@@ -97,6 +91,8 @@
     {% endblock js %}
     
     </script>
-  
+    <div class="footer d-flex align-items-center justify-content-center fixed-bottom pt-2" style="background-color: #092230">
+      <p class="text-center" style="color: white;">GharBulao © 2021. All Rights Reserved</p>
+    </div>
   </body>
 </html>
