--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -26,35 +26,30 @@
   </ul>
 
   <!-- The slideshow -->
-  <div class="carousel-inner" style=" width:100%; height: 200px !important;>
-    <div class="carousel-item active">
-      <img class="caraousel_img d-block mx-auto" src="https://wallpaperaccess.com/full/838646.jpg" alt="Houses">
-      <div class="carousel-caption">
-        <h6> HOGWARTSs.. </h6>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img style='max-height:530px;width:100vw;' src="https://images.unsplash.com/photo-1549294413-26f195200c16?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGhvdGVsc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img style='max-height:530px;width:100vw;' src="https://images.unsplash.com/photo-1599003509008-d6d24043cd5b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGhvdGVsc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img style='max-height:530px;width:100vw;' src="https://images.unsplash.com/photo-1535827841776-24afc1e255ac?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGhvdGVsc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
       </div>
     </div>
-    <div class="carousel-item">
-      <img class=" caraousel_img d-block mx-auto" src="https://www.visitcalifornia.com/sites/visitcalifornia.com/files/VC_WWoHP_ImageUpdates_Supplied_Portrait-Gallery-in-Hogwarts-Castle-WWoHP-at-USH_1280x640.jpg" alt="Hogwarts Castle">
-        <div class="carousel-caption">
-        <h6> Castle.. </h6>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img class=" caraousel_img d-block mx-auto" src="https://wallpaperboat.com/wp-content/uploads/2019/06/harry-potter-6.jpg" alt="Hogwarts">
-        <div class="carousel-caption">
-        <h6> Chamber Of Secrets.. </h6>
-      </div>
-    </div>
+    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+      <span class="carousel-control-prev-icon " style="color:darkblue" aria-hidden="true"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+      <span class="carousel-control-next-icon " style="color:darkblue" aria-hidden="true"></span>
+    </button>
   </div>
-
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-
 </div>
 </div>
 </div>
