--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,3 +1,4 @@
+<br>
 {% extends "users/base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
@@ -5,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="{% static 'users/Profile.css' %}">
 {% endblock style %}
 {% block content %}
+<br>
+{% comment %} <br> {% endcomment %}
    <div class="outer">
     <div class="content-section" style="margin-bottom:60px;">
       <div class="media">
