--- a/users/templates/users/about.html
+++ b/users/templates/users/about.html
@@ -33,7 +33,7 @@
 }
 
 .padding-c{
-    padding-top: 50px;
+    padding-top: 40px;
 }
 .img-height{
   height: 250px;
@@ -82,12 +82,12 @@
                 <img src="/media/logo.jpeg" width="300px" class="logo" alt="Logo">
                 <p class="para text-center"><span id="abc"><i class="fas fa-quote-left"></i></span> GharBulao.com is a social networking service and hospitality exchange service by which users can request homestays or interact with other people who are interested in travel.<span id="abc"><i class="fas fa-quote-right"></i></span></p>
             </div>
-          <hr class="my-1" style="background: white;">
+          <hr class="mt-1" style="background: white;">
         </div>
           </div>
         
       
-        <div class="album py-5 bg-light mb-5">
+        <div class="album py-3 bg-light mb-5">
           <div class="container">
             <h2 class="text-center">Our Team</h2>
           <hr>
