--- a/users/templates/users/contact.html
+++ b/users/templates/users/contact.html
@@ -7,7 +7,7 @@
 {% endblock style %}
 
 {% block body %}
-   <div class="my-3">
+   <div class="my-3" style="padding-top:30px">
         <h2 class="contact_h2 text-center mt-4">Contact Us</h2>
       </div>
       <div class="container contact">
@@ -31,7 +31,7 @@
                 <label htmlFor="exampleFormControlTextarea1" class="form-label">Message</label>
                 <textarea  class="form-control myform" id="exampleFormControlTextarea1" rows="3" required name="message"></textarea>
               </div>
-              <div class="form-group">
+              <div class="form-group d-flex justify-content-center">
               <button class="btn btn-outline-primary" type="submit">Submit</button>
               </div>
             </form>
