--- a/users/templates/users/showPost.html
+++ b/users/templates/users/showPost.html
@@ -1,70 +1,74 @@
 {% extends "users/base.html" %} {% load static %} {% load crispy_forms_tags %}
 {% load static %}
 {% block style %}
-  <link rel="stylesheet" type="text/css" href="{% static 'users/Reviews.css' %}"
+  <link rel="stylesheet" type="text/css" href="{% static 'users/Post.css' %}">
 {% endblock style %}
-{% block content %}
-<br />
-<br />
+{% block body %}
+<br>
+<br>
 <!-- Start -->
-
-<!-- Carousel -->
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://source.unsplash.com/1400x450/?hotel" class="d-block w-100 " alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
+<div class="container-fluid post_cont">
+<div class="left_post">
+<div class="shadow card mb-3 mx-auto">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="{{info.images.0.image.url}}" class="card-img" alt="..." height="100%">
     </div>
-    <div class="carousel-item">
-      <img src="https://source.unsplash.com/1400x450/?couch" class="d-block w-100 " alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://source.unsplash.com/1400x450/?room" class="d-block w-100 " alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">{{info.post.name}}</h5>
+        <p class="card-text">{{info.post.desc}}</p>
+        <p class="card-text">{{info.post.address}}</p>
+        <p class="card-text">{{info.post.state|capfirst}}</p>
+        <p class="card-text">{{info.post.pincode}}</p>
+        {% comment %} <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> {% endcomment %}
       </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </button>
 </div>
-
-<!-- Container -->
-
-<div class="card my-4" style="width: 50vw;">
-  <div class="card-body">
-    <h2 class="card-title">Credentials</h2>
-
+<h4 class="amenities">Amenities:</h4>
+<!-- Card -->
+<div class="am_cont d-flex justify-content-start">
+{% for amenity in info.post.amenities %}
+    <div class="card text-white mx-1" style="min-width:15rem;background-color:#{{forloop.counter}}22f3e">
+      <div class="card-body">
+      {% for key, value in icons.items %}
+      {% if key == amenity %}
+        <h5 class="card-title"><i class="{{value}}"></i></h5>
+      {%endif%}
+      {%endfor%}
+      </div>
+      <div class="card-header">{{amenity}}</div>
+    </div>
+{% endfor %}
+</div>
+<br>
+<h4 class="amenities">Reviews:</h4>
+{% if info.reviews%}
+<div class="reviews_cont">
+{% for review in info.reviews %}
+  <div class="card mt-3" style="width: 100%;background-color:#092230;">
+    <div class="card-body" style='color:#eae7d6'>
+     <div class="rr d-flex justify-content-between">
+      <h6 class="card-title" style='color:#eae7d6'>{{review.user.first_name}} {{review.user.last_name}}</h6>
+      <h6 class="card-title" style='color:#eae7d6'>{{review.rating}}<span class="fas fa-star ml-1" style="color: #eae7d6;"></span></h6>
+    </div>
+      <p class="card-text">{{review.review}}</p>
+    </div>
   </div>
+{% endfor %}  
 </div>
-
-<!-- End -->
-<h6>{{post.name}}</h6 >
-<div class="container">
-  <div class="jumbotron" style="background-color: rgb(233, 233, 233)">
+{% else %}
+    <h5 class="right_head">Sorry, there are no reviews for this location.</h5>
+  {% endif %}
+<br>
+<h4 class="amenities">Add Your Review:</h4>
+<div class="container d-flex justify-content-center">
+  <div class="jumbotron jumbotron-css" style="background-color: #eae7d6;width:75%;height:420px;" >
     <form method="POST" action='' id="post_form">
       {% csrf_token %}
       <fieldset class="form-group">
-        <legend class="border-bottom mb-4" style="text-align: center">
+        <legend class="border-bottom mb-4" style="text-align: center;">
           Share your experience to help other valuable customers!!
         </legend>
         <br>
@@ -89,13 +93,46 @@
         </div>
       </fieldset>
       <div class="form-group">
-        <button class="btn btn-outline-info" type="submit">Add Review</button>
+        <button class="btn btn-outline-info" type="submit" style='color: #092230'>Add Review</button>
       </div>
     </form>
   </div>
 </div>
+</div>
+<div class="right_post">
+ <div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Owner Details</h5>
+    <p class="card-text"><i class="fas fa-user"></i>  {{info.post.user.first_name}} {{info.post.user.last_name}}</p>
+    <p class="card-text"><b><i class="fab fa-whatsapp"></i></b>  +91 {{info.post.user.profile.mobile_no}}</p>
+    <p class="card-text"><i class="far fa-envelope"></i>  {{info.post.user.email}}</p>
+  </div>
+</div>
+<br>
+<h4 class="d-flex justify-content-center">Select Booking Date</h4>
+<hr>
+<div class="row-auto">
+<div class="col input-group">
+    <div class="input-group mb-3">
+  <input type="date" class="form-control" placeholder="date" aria-label="date" aria-describedby="basic-addon1">
+</div>
+    </div>
+<div class="col-auto d-flex justify-content-center">
+    <a href="{% url 'receipt' pk=info.post.id  %}" class="btn btn-outline-primary">Book</a>
+    </div>
+</div>
+</div>
+<div>
 
-{% endblock content %} 
+</div>
+</div>
+<hr>
+<hr>
+
+<!-- End -->
+<br>
+
+{% endblock body %} 
 {% block js %} 
 let data=0;
 $(".rating a").on('click', function(e){
@@ -105,7 +142,7 @@ data = $(this).data('value')
 $(document).on('submit',function(e){
     $.ajax({
         type:'POST',
-        url:'{% url "showPost" pk=post.id %}',
+        url:'{% url "showPost" pk=info.post.id %}',
         data:{
             review:$('#review').val(),
             rating: data,
@@ -115,7 +152,7 @@ $(document).on('submit',function(e){
         success:function(json){
             console.log("done!!");
             window.alert("Your review has been posted successfully!!");
-            return window.location.href = "http://localhost:8000/showPost/"+ toString(post.id);
+            return window.location.href = "http://localhost:8000/showPost/"+ toString(info.post.id);
         },
         error : function(xhr,errmsg,err) {
             window.alert("You have already posted a review on this post!");
