--- a/users/templates/users/about.html
+++ b/users/templates/users/about.html
@@ -80,7 +80,7 @@
             <div class="jumbotron" style="background: #092230">
               <div class="bio">
                 <img src="/media/logo.jpeg" width="300px" class="logo" alt="Logo">
-                <p class="para text-center"><span id="abc"><i class="fas fa-quote-left"></i></span> GharBulao.com is a social networking service and hospitality exchange service by which users can request homestays or interact with other people who are interested in travel.<span id="abc"><i class="fas fa-quote-right"></i></span></p>
+                <p class="para text-center"><span id="abc"><i class="fas fa-quote-left"></i></span> GharBulao is a networking service and hospitality exchange service by which users can request homestays or interact with other people who are interested in travel.<span id="abc"><i class="fas fa-quote-right"></i></span></p>
             </div>
           <hr class="mt-1" style="background: white;">
         </div>
@@ -94,7 +94,7 @@
             <div class="row d-flex justify-content-center">
               <div class="col-lg-3 d-flex align-items-stretch">
                 <div class="card shadow-sm">  
-                    <img src="/media/profile/Krish4.jpeg" class="card-img-top img-height" alt="..." style="max-height:300px;">         
+                    <img src="/media/profile/default.png" class="card-img-top img-height" alt="..." style="max-height:300px;">         
                   <div class="card-body">
                     <h5 class="card-title">Krish Vadhani</h5><hr>
                     <p class="card-text">Third Year Computer Engineering student from K. J. Somaiya College Of Engineering.</p>
@@ -114,7 +114,7 @@
               </div>
               <div class="col-lg-3 d-flex align-items-stretch">
                 <div class="card shadow-sm">    
-                    <img src="/media/profile/priyal.jpg" class="card-img-top img-height" alt="..." style="max-height:300px;">       
+                    <img src="/media/profile/default.png" class="card-img-top img-height" alt="..." style="max-height:300px;">       
                   <div class="card-body">
                     <h5 class="card-title">Priyal Babel</h5><hr>
                     <p class="card-text">Third Year Computer Engineering student from K. J. Somaiya College Of Engineering.</p>
@@ -134,7 +134,7 @@
               </div>
               <div class="col-lg-3 d-flex align-items-stretch">
                 <div class="card shadow-sm">
-                    <img src="/media/profile/devansh.jpeg" class="card-img-top img-height" alt="..." style="max-height:300px;">     
+                    <img src="/media/profile/default.png" class="card-img-top img-height" alt="..." style="max-height:300px;">     
                   <div class="card-body">
                     <h5 class="card-title">Devansh Shah</h5><hr>
                     <p class="card-text">Third Year Computer Engineering student from K. J. Somaiya College Of Engineering.</p>
