--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -6,7 +6,7 @@
 {% block body %}
 
 <div class="landing_img d-flex justify-content-center align-items-center" style="width:100vw;height:90vh;">
-    <h3 class="text-center ml-2 mr-2 tag_line" style="color:#fff;"><i class="fas fa-quote-right icon_flip"></i> Stay with the locals and meet new Travellers! :) <i class="fas fa-quote-right"></i></h3>
+    <h3 class="text-center ml-2 mr-2 tag_line" style="color:#fff;"><i class="fas fa-quote-right icon_flip"></i> Stay with Locals and Meet new Travellers! :) <i class="fas fa-quote-right"></i></h3>
     <h6 class="author">~ GharBulao</h6>
 </div>
 <div class="container">
