--- a/users/templates/users/receipt.html
+++ b/users/templates/users/receipt.html
@@ -48,7 +48,7 @@
     <hr />
   </div>
 </div>
-<div style="margin-right: 200px; padding-left: 200px; padding-top: 20px">
+<div style="margin-right: 200px; padding-left: 200px; padding-top: 20px; margin-bottom: 50px">
   <div class="text-right">
     <a>
       <button id="printInvoice" class="btn btn-info">
